--- a/minimal/minimal-calculator-basic.html
+++ b/minimal/minimal-calculator-basic.html
@@ -63,7 +63,7 @@ body {
 }
 
 .calculator .accent{
-   background: #f3fff3;  background: #f3fff3;;
+   background: #e7d7e1;  background: #e7d7e1;;
 }
 
 .calculator .space {
@@ -82,7 +82,7 @@ body {
 
 .calculator button:hover,
 #backspace:hover {
-  background: #f3fff3;
+  background: #e7d7e1;
   color:#000000;
   transform: scale(0.9);
   border-radius: 20%;
